kubernetes/apps/kube-system/cilium/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - "hubble.altena.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          kind: Service
          group: ""
          port: 80
